syntax = "proto3";

package apipb;

option go_package = "github.com/vx416/axs/pb/apipb";

import "enum.proto";

service AccountBalanceService {
    rpc BatchSubmitBalanceChanges (BatchSubmitBalanceChangesRequest) returns (BatchSubmitBalanceChangesResponse) {}
}

message BatchSubmitBalanceChangesRequest {
    repeated SubmitBalanceChangeRequest requests = 1;
}

message BatchSubmitBalanceChangesResponse {
    repeated SubmitBalanceChangeResponse responses = 1;
}


message SubmitBalanceChangeResponse {
    string event_id = 1;
    string idempotency_key = 2;
    BalanceChangeEventStatus status = 3;
    int64 submitted_msec = 4;
    string error_message = 5;
}

message SubmitBalanceChangeRequest {
    string event_id = 1;
    string event_type = 2;
    int64 event_type_id = 3;
    int64 account_id = 4;
    int64 user_id = 5;
    string source_service = 6;
    int64 source_svc_id = 7;
    int64 related_order_id = 8;
    string idempotency_key = 9;
    int64 created_msec = 10;
    repeated BalanceChange changes = 11;
}

message BalanceChange {
    int64 change_id = 1;
    string currency_code = 2;
    string currency_symbol = 3;
    string available_delta = 4;
    string frozen_delta = 5;
    string fallback_currency_code = 6;
    string fallback_currency_symbol = 7;
    string fallback_available_delta = 8;
    string fallback_frozen_delta = 9;
}


